# haven

./: .dockerignore  .gitignore  README.md  analyze_flip.json  analyze_rental.json  dockerfile  flip.json  haven.db  ingest_4w.jsonl  makefile  mypy.ini  package-lock.json  pyproject.toml  rental.json  requirements.api.txt  requirements.txt  ruff.toml  run_pipeline.sh
configs/: features.yaml  finance.yaml  targets.yaml
entrypoints/: start.sh
frontend/: haven.db  package-lock.json  package.json  vite.config.ts
models/: README.md  rent_model.py
scripts/: README.md  build_features.py  build_features_parallel.py  debug_analyze_deal.py  debug_rehab_estimator.py  debug_rent_estimator.py  debug_top_deal_sample.py  eval_rent_heuristic.py  eval_rent_model.py  eval_sanity.py  eval_scoring_grid.py  evaluate_engine.py  fetch_hasdata_property.py  fetch_hasdata_zillow.py  ingest_properites_rentcast_parallel.py  ingest_properties.py  ingest_properties_parallel.py  ingest_properties_rentcast.py  normalize_hasdata.py  rebuild_deals.py  score_candidates.py  score_candidates_parallel.py  score_dscr_coc_batch.py  test_analyze_deal.py  top_deals_for_zip.py  train_arv.py  train_flip.py  train_rent_quantiles.py  tune_label_thresholds.py
tests/: conftest.py  test_api_analyze_success.py  test_api_missing_required_fields.py  test_api_percent_and_string_inputs.py  test_deal_analyzer_basic.py  test_deal_analyzer_multifamily.py  test_deal_analyzer_scoring_order.py  test_finance.py  test_finance_single_family.py  test_flip_classifier_integration.py  test_geo_features.py  test_leads_metrics.py  (+2 more)
(+114 files in other folders)
