[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haven"
version = "0.1.0"
description = "Real estate ARV modeling and flip selection"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "lightgbm",
  "scikit-learn",
  "joblib",
  "mlflow",
  "pyarrow"
]

[tool.setuptools.packages.find]
where = ["src"]
